Remove bogus method that makes backgrounds on the canvas unhappy.  Bug 219302, r+sr=roc